--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,18 @@
 
   <meta charset="utf-8">
   <meta name="description" content="GUID generator provides the best GUID in either v4 or v1 format. Easy 1-click copy/regenerate make this a great tool for everyone.">
+
+  <!-- favicon stuff -->
+  <!-- generated from https://realfavicongenerator.net -->
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <!-- /favicon stuff -->
+
   <title>The Best Guid</title>
   <style>
     body {
@@ -55,7 +67,7 @@
       padding: 16px;
       text-align: center;
     }
-    
+
     .content > * {
       padding-bottom: 16px;
     }
