add meta keywords

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,8 @@
 
   <meta charset="utf-8">
   <meta name="description" content="GUID generator provides the best GUID in either v4 or v1 format. Easy 1-click copy/regenerate make this a great tool for everyone.">
-
+  <meta name="keywords" content="guid,generator,uuid,best">
+  
   <!-- favicon stuff -->
   <!-- generated from https://realfavicongenerator.net -->
   <meta name="msapplication-TileColor" content="#da532c">
