feat: main page v2
features:
 - capable of generating more than one guid at once
 - optional separator type
 - optional quote type
 - selector to view older versions of the site

--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <!-- version 2 -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51921880-2"></script>
   <script>
@@ -28,102 +29,89 @@
   <!-- /favicon stuff -->
 
   <title>The Best Guid</title>
-  <style>
-    body {
-      display: flex;
-      margin: 0;
-      flex-direction: column;
-      height: 100vh;
-      font-family: monospace;
-    }
-
-    .header {
-      align-items: baseline;
-      background: #657a8c;
-      color: #eee;
-      display: flex;
-      flex-direction: row;
-      font: 2em monospace;
-      justify-content: space-between;
-      padding: 0 32px;
-      text-align: center;
-    }
-    
-    .header .title {
-      font-size: 1.75em;
-      font-weight: normal;
-    }
-
-    .tab-link {
-      color: #eee;
-      text-decoration: none;
-    }
-
-    .tab-link:hover {
-      border-bottom: 2px solid #eee;
-    }
-
-    .content {
-      flex-grow: 2;
-      padding: 16px;
-      text-align: center;
-    }
-
-    .content > * {
-      padding-bottom: 16px;
-    }
-
-    .message {
-      font-size: 1.25em;
-      
-    }
-
-    #guid {
-      font-size: 1.5em;
-      text-align: center;
-    }
-
-    .footer {
-      color: #aaa;
-      text-align: center;
-    }
-
-    .footer a {
-      color: #999;
-      width: 100%;
-    }
-  </style>
-  <script src="/uuid.js"></script>
+  <link rel="stylesheet" href="./main.css">
+  <script src="./uuid.js"></script>
   <script type="text/javascript">
-    function updateGuid() {
-      const fnmap = {
-        'v1': v1,
-        'v4': v4,
-      }
-      const ver = document.getElementById('version').value;
-      const nextGuid = fnmap[ver] || v4;
-      document.getElementById('guid').value = nextGuid();
-    }
-
     window.addEventListener('load', (event) => {
-      const selectElement = document.getElementById('version');
+      function updateSingle() {
+        console.log('creating a single guid');
+        document.getElementById('guid').value = uuid();
+      }
+      function updateMultiple() {
+        const formElements = document.forms[0].elements;
+        const count = parseInt(formElements['count'].value);
+        if (count > 1000 || count < 1) {
+          console.log('bad value!')
+          return;
+        }
+        const separatorType = formElements['separator'].value;
+        const separator = separatorType === 'space' ? ' ' : (separatorType === 'comma' ? ',' : '\n');
+        const quoteType = formElements['quotestyle'].value;
+        const quote = quoteType === 'single' ? "'" : (quoteType === 'double' ? '"' : '');
+        console.log(`creating ${typeof count} ${count} guids, with ${quoteType} around and ${separatorType} between`);
+        const uuidText = new Array(count).fill(0).map(() => quote + uuid() + quote).join(separator);
+        document.getElementById('guid-long').value = uuidText;
+      }
 
-      selectElement.addEventListener('change', (event) => {
+      function updateGuid() {
+        const isSingleMode = document.getElementById('single-guid').checked;
+        if (isSingleMode) {
+          updateSingle();
+        } else {
+          updateMultiple();
+        }
+      }
+
+      function updateInvisibleItems() {
+        const isSingle = document.getElementById('single-guid').checked;
+        const isMulti = document.getElementById('multi-guid').checked;
+        const invisibleClass = 'invisible';
+        const guidShort = document.getElementById('guid');
+        const guidLong = document.getElementById('guid-long');
+        const settingsForm = document.getElementById('settings-form');
+        if (isSingle) {
+          guidShort.classList.remove(invisibleClass);
+          guidLong.classList.add(invisibleClass);
+          settingsForm.classList.add(invisibleClass);
+        } else if (isMulti) {
+          guidShort.classList.add(invisibleClass);
+          guidLong.classList.remove(invisibleClass);
+          settingsForm.classList.remove(invisibleClass);
+        }
+      }
+
+      document.getElementById('site-version').addEventListener('change', (event) => {
+        const route = '/' + (event.target.value === 'latest' ? '' : event.target.value);
+        location.assign(route);
+      });
+
+      document.forms[0].addEventListener('change', () => {
         updateGuid();
       });
 
-      const newButton = document.getElementById('refresh');
-      newButton.addEventListener('click', (e) => {
+      document.getElementById('multi-guid').addEventListener('change', (event) => {
+        updateInvisibleItems();
+        updateGuid();
+      });
+      document.getElementById('single-guid').addEventListener('change', (event) => {
+        updateInvisibleItems();
         updateGuid();
       });
 
-      const copyButton = document.getElementById('copy');
-      copyButton.addEventListener('click', () => {
-        var copyText = document.getElementById('guid');
+      document.getElementById('refresh').addEventListener('click', (e) => {
+        updateGuid();
+      });
+
+      document.getElementById('copy').addEventListener('click', () => {
+        const isSingle = document.getElementById('single-guid').checked;
+        const copyText = isSingle 
+          ? document.getElementById('guid')
+          : document.getElementById('guid-long');
         copyText.select();
         document.execCommand('copy');
       });
 
+      updateInvisibleItems();
       updateGuid();
     });
   </script>
@@ -133,22 +121,56 @@
   <div class='header'><h1 class="title">Guid.Best</h1><span><a class="tab-link" href="https://github.com/jtrinklein/guid.best">GitHub</a></span></div>
   <div class='content'>
     <div class='message'>
-      Right now, this is the best GUID!
+      Get yourself the best GUID available!
     </div>
     <div class='controls'>
       <input readonly type='text' aria-label='guid value' id='guid' size=36 />
+      <textarea class='invisible' readonly type='text' cols=75 rows=5 aria-label='guid value' id='guid-long' size=36 ></textarea>
       <button type="button" id='copy'><img height=24 width=24 src='/copy.svg' alt="copy" /></button>
       <button type="button" id='refresh'><img height=24 width=24 src='/reload.svg' alt="new" /></button>
     </div>
     <div class='settings'>
-      <span id='version-label'>GUID Version</span>
-      <select id='version' aria-labelledby="version-label">
-        <option value='v4'>v4</option>
-        <option value='v1'>v1</option>
+      <div>
+        Output:
+        <label><input id='single-guid' type='radio' name='mode' value='single' checked> Single</label>
+        <label><input id='multi-guid' type='radio' name='mode' value='multiple' > Multiple</label>
+      </div>
+      <div>
+        <form id='settings-form' class='invisible'>
+          <div>
+            <label>Count: <input name='count' type='number' min=2 max=100 value=2></label>
+          </div>
+          <div>
+            Separator: 
+            <label><input name='separator' type='radio' value='newline' checked>newline</label>
+            <label><input name='separator' type='radio' value='comma' >comma</label>
+            <label><input name='separator' type='radio' value='space' >space</label>
+          </div>
+          <div>
+            Quotes: 
+            <label><input name='quotestyle' type='radio' value='none' checked>None</label>
+            <label><input name='quotestyle' type='radio' value='single' >Single</label>
+            <label><input name='quotestyle' type='radio' value='double' >Double</label>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class='footer'>
+    <div>
+      uuid generator code taken from <a href="https://github.com/kelektiv/node-uuid">node-uuid</a>.
+    </div>
+    <div>
+      Site version v2
+    </div>
+    <div>
+      View another version:
+      <select id='site-version'>
+        <option selected>latest</option>
+        <option>v1</option>
       </select>
     </div>
   </div>
-  <div class='footer'>guids generated using <a href="https://github.com/kelektiv/node-uuid">uuid</a></div>
 </body>
 
 </html>
