fix: quick fix to version selector until I figure out s3 settings

--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,7 @@
       }
 
       document.getElementById('site-version').addEventListener('change', (event) => {
-        const route = '/' + (event.target.value === 'latest' ? '' : event.target.value);
+        const route = '/' + (event.target.value === 'latest' ? '' : `${event.target.value}/index.html`);
         location.assign(route);
       });
 
